--- a/views/layout.pug
+++ b/views/layout.pug
@@ -83,10 +83,14 @@ html
             button.btn.btn-secondary.close-modal(type='button' data-dismiss='modal') Cerrar
             
             
-    script(src="/javascripts/jquery-3.4.1.min.js")
-    script(src="/javascripts/bootstrap/bootstrap.min.js")
-    script(src="/javascripts/bootstrap/bootstrap.bundle.min.js")
-    script(src="/javascripts/chart/Chart.min.js")
-    script(src="/javascripts/custom-chart.js")
-    script(src="/javascripts/users.js")
+    script(src="/javascripts/vendors/jquery-3.4.1.min.js")
+    script(src="/javascripts/vendors/bootstrap/bootstrap.min.js")
+    script(src="/javascripts/vendors/bootstrap/bootstrap.bundle.min.js")
+    script(src="/javascripts/vendors/chart/Chart.min.js")
+    script(src="/javascripts/helpers/functions.helpers.js")
+    script(src="/javascripts/modules/user.module.js")
+    script(src="/javascripts/components/custom.chart.component.js")
+    script(src="/javascripts/components/profile.component.js")
+    script(src="/javascripts/components/update.form.component.js")
+    script(src="/javascripts/components/table.component.js")
     script(src="/javascripts/index.js")
